--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,12 @@
 Changelog for 'lsmeans' package
 
+1.06-05 - February 13, 2013
+    Fixed a bug whereby unused levels of factors can create havoc.
+
+1.06-00 - January 14, 2013
+    Added a 'trend' argument for estimating and contrasting fitted trends
+        rather than lsmeans
+
 1.05-01 - December 5, 2012
     Fixed a bug that occurs when model contains expressions like (a + b + c)^2
         or other expressions that expand to interaction terms
