--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,17 @@
 Changelog for 'lsmeans' package
 
+2.00-0
+    This is a major redesign of the package. Single function 'lsmeans'
+    is replaced by methods for different types of models and 
+    specifications, and returns an 'lsmobj' rather than a 'data.frame'.
+    New functions 'ref.grid', 'contrast', 'lstrends', and new 'summary',
+    'confint', 'test', 'glht', 'cld' methods for 'ref.grid' and 'lsmobj'
+    objects. See the vignette "lsmeans-changes" for more details.
+    This version is easily extensible to various types of model objects, 
+    and several more are supported such as survreg, coxph, polr.
+    There is also full support for na.actions, and for back-transforming
+    results when a response is transformed or a link function is used.
+
 1.10-4
     Fixed bug in cld spec that caused multiple letter columns
 
